# news_app

./: .clinerules  .dockerignore  .env.docker  .env.example  .env.racknerd  .gitignore  .pre-commit-config.yaml  1  AGENTS  BOOTSTRAP_SUMMARY.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.scrapers  Dockerfile.server  Dockerfile.workers  FEED_BOOTSTRAP_README.md  FEED_DEBUG_REPORT.md  FIX_SUMMARY.md  FLY_MIGRATION_INSTRUCTIONS.md  Procfile  QUEUE_IMPLEMENTATION.md  README.md  README_BOOTSTRAP.md  SOURCES_FIX.md  TODO.md  WORKERS_README.md  alembic.ini  ask-questions-if-underspecified.skill  crontab  debug_content_output.json  docker-compose.yml  fly.toml  hello.py  index.html  package.json  pyproject.toml  requirements.txt  responses.html  run_tests.py  (+7 more)
.agents/: settings.local.json
.beads/: config.yaml  issues.jsonl
.claude/: settings.json  settings.local.json
.codex/: config.toml
.githooks/: post-commit
.tmp/: axe-js-test.txt  axe-knowledge-armin-after-fix.txt  axe-knowledge-query1.txt  axe-knowledge-query2.txt  axe-model-uncheck.txt  axe-open-eval-login.txt  eval-ui-results.json  eval-ui.spec.js  ocr.swift  ocr_arg.swift  ocr_boxes.swift  ocr_boxes_arg.swift
.xcodebuildmcp/: config.yaml
admin/: .env.example  __init__.py  __main__.py  cli.py  config.py  log_parsing.py  output.py  remote.py  remote_ops.py  sql_guard.py  ssh.py
ai-memory/: .gitignore  PROMPT.md  README.md  TASKS-refactor.old  TASKS.md
alembic/: env.py
app/: __init__.py  config.py  constants.py  database.py  llm.py  main.py  main_refactored.py  models.py  openapi.py  processor.py  queue.py  schemas.py  templates.py
(+3075 files in other folders)
