[project]
name = "news-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "docling>=2.34.0",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "google-generativeai>=0.3.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "news-please>=1.6.14",
    "pillow>=10.0.0",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.0",
    "pyyaml>=6.0.2",
    "praw>=7.7.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
