[project]
name = "news-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "docling>=2.34.0",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "news-please>=1.6.14",
    "pillow>=10.0.0",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.0",
    "pyyaml>=6.0.2",
    "praw>=7.7.1",
    "requests>=2.32.3",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.41",
    "trafilatura>=1.8.0",
    "uvicorn>=0.34.2",
    "google-genai>=1.18.0",
    "huey>=2.5.3",
    "beautifulsoup4>=4.13.4",
    "markdown>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cron*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.12",
]
